--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,4 +39,26 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_width="200dp" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/login_google"
+        android:visibility="visible"
+        android:layout_width="200dp"
+        android:layout_below="@+id/app_name"
+        android:layout_alignStart="@+id/app_name"
+        android:layout_marginTop="15dp"
+        android:layout_height="35dp" />
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_facebook"
+        android:layout_gravity="center_horizontal"
+        android:visibility="visible"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/login_google"
+        android:layout_alignStart="@+id/login_google"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
+
+
+
 </RelativeLayout>
