alteraçoes no login_activity (nao funcionam)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,4 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pt.ulisboa.ciencias.cinerush.LoginActivity">
 
+    <LinearLayout
+        android:id="@+id/buttonlayout"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></LinearLayout>
+
 </RelativeLayout>
