--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -13,4 +13,13 @@
     tools:context="pt.ulisboa.ciencias.cinerush.DrawerActivity"
     tools:showIn="@layout/app_bar_drawer">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="63dp"
+        android:id="@+id/fragment_container">
+
+    </FrameLayout>
 </RelativeLayout>
