--- a/app/src/main/res/layout/content_individual_mode.xml
+++ b/app/src/main/res/layout/content_individual_mode.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_individual_mode"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pt.ulisboa.ciencias.cinerush.IndividualModeActivity"
-    tools:showIn="@layout/activity_individual_mode">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/content_individual_mode"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:paddingBottom="@dimen/activity_vertical_margin"
+android:paddingLeft="@dimen/activity_horizontal_margin"
+android:paddingRight="@dimen/activity_horizontal_margin"
+android:paddingTop="@dimen/activity_vertical_margin"
+android:orientation="vertical"
+app:layout_behavior="@string/appbar_scrolling_view_behavior"
+tools:context="pt.ulisboa.ciencias.cinerush.IndividualModeActivity"
+tools:showIn="@layout/activity_individual_mode">
 
-</RelativeLayout>
+<!-- Container view to scroll horizontally which gives the carousel effect -->
+
+<HorizontalScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:scrollbars="none">
+
+    <!-- Carousel items container - lays out items horizontally -->
+    <LinearLayout android:id="@+id/carousel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
+
+</HorizontalScrollView>
+
+<ListView
+    android:id="@+id/friend_list"
+    android:layout_width="match_parent"
+    android:layout_height="100dp" />
+
+</LinearLayout>
