--- a/app/src/main/res/layout/fragment_main_movies.xml
+++ b/app/src/main/res/layout/fragment_main_movies.xml
@@ -1,21 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    tools:context="pt.ulisboa.ciencias.cinerush.MainMoviesFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </RelativeLayout>
 
     <ListView
         android:id="@+id/movie_list"
@@ -25,4 +13,4 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="90dp" />
 
-</RelativeLayout>
+</FrameLayout>
