--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -20,6 +20,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="63dp"
         android:id="@+id/fragment_container">
+        <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 </RelativeLayout>
