login a funcionar decentemente (user information a aparecer)

--- a/app/src/main/res/layout/app_bar_drawer.xml
+++ b/app/src/main/res/layout/app_bar_drawer.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="pt.ulisboa.ciencias.cinerush.DrawerActivity">
+    tools:context="pt.ulisboa.ciencias.cinerush.MainActivityDrawer">
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
