--- a/app/src/main/res/layout/fragment_main_movies.xml
+++ b/app/src/main/res/layout/fragment_main_movies.xml
@@ -5,12 +5,15 @@
     tools:context="pt.ulisboa.ciencias.cinerush.MainMoviesFragment">
 
 
-    <ListView
-        android:id="@+id/movie_list"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="90dp" />
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"/>
+    </LinearLayout>
 
 </FrameLayout>
