recycler view alterada

--- a/app/src/main/res/layout/fragment_main_movies.xml
+++ b/app/src/main/res/layout/fragment_main_movies.xml
@@ -5,6 +5,12 @@
     tools:context="pt.ulisboa.ciencias.cinerush.MainMoviesFragment">
 
 
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar" />
+
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
