--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -6,9 +6,27 @@
     android:layout_width="match_parent"
     card_view:cardCornerRadius="4dp"
     android:layout_margin="10dp">
-    <TextView
-        android:id="@+id/text_cardview"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="20dp" />
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/movie_image"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/movie_title_pt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp" />
+        <TextView
+            android:id="@+id/movie_title_original"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/movie_genre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
 </android.support.v7.widget.CardView>
