--- a/app/src/main/res/layout/fragment_main_movies.xml
+++ b/app/src/main/res/layout/fragment_main_movies.xml
@@ -6,10 +6,11 @@
 
 
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar" />
+        android:layout_gravity="center" />
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
