--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -14,7 +14,7 @@
     tools:context="pt.ulisboa.ciencias.cinerush.MovieDetailsActivity"
     tools:showIn="@layout/activity_movie_details">
     <android.support.v7.widget.CardView
-        android:id="@+id/avatar"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -44,14 +44,13 @@
                     android:layout_marginStart="20dp"
                     android:layout_alignTop="@+id/movieImage1"
                     android:layout_toEndOf="@+id/movieImage1"
-                    android:text="Título"
-                    tools:textStyle="bold" />
+                    android:text="Título" />
                 <TextView
+                    tools:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tituloOriginal"
-                    android:layout_marginStart="20dp"
-                    android:text="Titulo Original" />
+                    android:layout_marginStart="20dp"/>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
@@ -62,8 +61,7 @@
                         android:id="@+id/estreia"
                         android:layout_below="@+id/titulo"
                         android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/titulo"
-                        android:text="Estreia" />
+                        android:layout_alignStart="@+id/titulo"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -99,37 +97,11 @@
         tools:text="Interpretes"
         android:textStyle="bold"
         android:text="Interpretes" />
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/interpretes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <android.support.v7.widget.CardView
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:cardCornerRadius="4dp"
-                    android:layout_margin="10dp">
-                    <LinearLayout
-                        android:id="@+id/movie_interprete_container"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/interprete_funcao"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textStyle="bold"
-                            android:layout_alignParentTop="true" />
-
-                        <TextView
-                            android:id="@+id/interprete_nome"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
-            </android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/interpretes_recyclerview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
     <TextView
         android:layout_width="wrap_content"
@@ -138,40 +110,9 @@
         android:textStyle="bold"
         android:text="Sessões" />
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/sessoes"
+        android:id="@+id/sessoes_recyclerview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <android.support.v7.widget.CardView
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:cardCornerRadius="4dp"
-            android:layout_margin="10dp">
-            <LinearLayout
-                android:id="@+id/movie_sessoes_container"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/nome_cinema"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Nome Cinema" />
 
-                <TextView
-                    android:id="@+id/horario"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Horario" />
-
-                <TextView
-                    android:id="@+id/preco"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="preco" />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
