--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -102,6 +102,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/progressBarInterpretes"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -113,6 +119,11 @@
         android:id="@+id/sessoes_recyclerview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
     </android.support.v7.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/progressBarSessoes"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 </LinearLayout>
