--- a/app/src/main/res/layout/cardview_interpretes.xml
+++ b/app/src/main/res/layout/cardview_interpretes.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/interpretes_container"
-        android:layout_height="wrap_content"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    card_view:cardCornerRadius="4dp"
+    android:layout_margin="10dp">
+    <LinearLayout
+        android:id="@+id/movie_interprete_container"
         android:layout_width="match_parent"
-        card_view:cardCornerRadius="4dp"
-        android:layout_margin="10dp">
-        <LinearLayout
-            android:id="@+id/movie_interprete_container"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/interprete_nome"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            />
 
-            <TextView
-                android:id="@+id/interprete_funcao"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_alignParentTop="true" />
+        <TextView
+            android:id="@+id/interprete_funcao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true" />
 
-            <TextView
-                android:id="@+id/interprete_nome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
-        </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
