--- a/app/src/main/res/layout/cardview_main_movies.xml
+++ b/app/src/main/res/layout/cardview_main_movies.xml
@@ -2,10 +2,12 @@
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_movies_cardview_item"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:clickable="true">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,13 +16,14 @@
             android:id="@+id/movie_image"
             android:adjustViewBounds="true"
             android:layout_width="150dp"
-            android:layout_height="150dp" />
+            android:layout_height="150dp"
+            android:layout_weight="1"/>
         <LinearLayout
             android:id="@+id/movie_info_container"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_weight="3">
+            android:layout_weight="2">
 
             <TextView
                 android:id="@+id/movie_title_pt"
@@ -40,6 +43,11 @@
                 android:layout_alignParentBottom="true" />
 
         </LinearLayout>
+        <android.support.v7.widget.AppCompatCheckBox
+            android:id="@+id/movie_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
     </LinearLayout>
 
 
