--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -13,117 +13,136 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="pt.ulisboa.ciencias.cinerush.MovieDetailsActivity"
     tools:showIn="@layout/activity_movie_details">
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="100dp"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/movieImage"
-                android:adjustViewBounds="true"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/titulo"
-                    android:layout_marginStart="20dp"
-                    android:layout_alignTop="@+id/movieImage1"
-                    android:layout_toEndOf="@+id/movieImage1"
-                    android:text="Título" />
-                <TextView
-                    tools:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tituloOriginal"
-                    android:layout_marginStart="20dp"/>
                 <LinearLayout
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/movieImage"
+                            android:adjustViewBounds="true"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentStart="true" />
+
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:textStyle="bold"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/titulo"
+                                android:layout_marginStart="20dp"
+                                android:layout_alignTop="@+id/movieImage1"
+                                android:layout_toEndOf="@+id/movieImage1"
+                                android:text="Título" />
+                            <TextView
+                                tools:textStyle="bold"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/tituloOriginal"
+                                android:layout_marginStart="20dp"/>
+                            <LinearLayout
+                                android:orientation="horizontal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="20dp">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/estreia"
+                                    android:layout_below="@+id/titulo"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_alignStart="@+id/titulo"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/genero"
+                                    android:layout_below="@+id/titulo"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_alignStart="@+id/titulo"
+                                    android:text="Género" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/duracao"
+                                    android:layout_below="@+id/titulo"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_alignStart="@+id/titulo"
+                                    android:text="Duração" />
+                            </LinearLayout>
+
+                        </LinearLayout>
+                    </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/estreia"
-                        android:layout_below="@+id/titulo"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/titulo"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/genero"
-                        android:layout_below="@+id/titulo"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/titulo"
-                        android:text="Género" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/duracao"
-                        android:layout_below="@+id/titulo"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignStart="@+id/titulo"
-                        android:text="Duração" />
+                        android:id="@+id/descricao"
+                        android:layout_marginTop="12dp"
+                        android:text="Descrição" />
                 </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/descricao"
-                    android:layout_marginTop="12dp"
-                    android:text="Descrição" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Interpretes"
+                android:textStyle="bold"
+                android:text="Interpretes" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/interpretes_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.RecyclerView>
+            <ProgressBar
+                android:id="@+id/progressBarInterpretes"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tag_sessoes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Sessões"
+                android:textStyle="bold"
+                android:text="Sessões" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/sessoes_recyclerview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </android.support.v7.widget.RecyclerView>
+            <ProgressBar
+                android:id="@+id/progressBarSessoes"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
         </LinearLayout>
-    </android.support.v7.widget.CardView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Interpretes"
-        android:textStyle="bold"
-        android:text="Interpretes" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/interpretes_recyclerview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
-    <ProgressBar
-        android:id="@+id/progressBarInterpretes"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+    </ScrollView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Sessões"
-        android:textStyle="bold"
-        android:text="Sessões" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/sessoes_recyclerview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
-    <ProgressBar
-        android:id="@+id/progressBarSessoes"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
 </LinearLayout>
